# diceberg

./: Cargo.toml  README.MD  data.ipc  data.json
.github/workflows/: publish_docs.yml
docs/: AI_README.md  MCP_README.md  book.toml
docs/src/: SUMMARY.md  chapter_1.md  features.md  installation.md  introduction.md  usage.md
docs/src/installation/: macos.md  package.md
docs/src/usage/: ai.md  cli.md  library.md  mcp.md  requirements.md
src/: lib.rs
src/api/: mod.rs  traits.rs
src/api/client/: asset.rs  base.rs  core_scope.rs  iceberg_scope.rs  mod.rs
src/api/dici/: asset.rs  catalog.rs  config.rs  core.rs  iceberg.rs  mod.rs
src/api/http/management/: client.rs  config.rs
src/api/http/management/model/: inventory.rs  mod.rs  sync.rs
src/api/iceberg/: client.rs  core.rs  iceberg.rs  mod.rs  traits.rs
src/api/management/: client.rs  inventory.rs  mod.rs  registration.rs  version.rs
src/api/store/: mod.rs
src/api/store/asset/: core.rs  dici.rs  iceberg.rs  mod.rs
src/api/store/asset/traits/: manually_sqlable.rs  mod.rs  schema_source.rs  sqlable.rs  table_source.rs
src/api/store/catalog/: catalog_source.rs  dici.rs  mod.rs
src/api/traits/: manually_sqlable.rs  mod.rs  sqlable.rs  table_source.rs
src/cli/: ai.rs  commands.rs  info.rs  mod.rs  sql.rs
src/cli/info/: mod.rs  schema.rs
src/cli/info/lookup/: inventory.rs  mod.rs  registration.rs
src/cli/info/table/: mod.rs  partition.rs  schema.rs
src/cli/info/table/history/: all.rs  mod.rs  snapshot.rs
src/cli/info/table/stats/: manifest_size.rs  mod.rs  table_size.rs
src/cli/serve/: mcp.rs  mod.rs
src/cli/util/: ipc.rs  mod.rs
src/cli/util/ipc/: mod.rs  print.rs  query.rs
src/examples/: schema.rs
src/mcp/: handler.rs
src/mcp/tools/: asset.rs  datetime.rs  management.rs  mod.rs  sql.rs
src/term/: duplex.rs  llm_chat_sink.rs  llm_chat_ui_source.rs  mod.rs
src/term/ui/: mod.rs  render.rs  traits.rs
src/term/ui/chat/: message.rs  mod.rs  scroll.rs  state.rs  view.rs
src/term/ui/input/: state.rs  view.rs
src/term/ui/legend/: state.rs  view.rs
src/term/ui/status/: state.rs  view.rs
